--- a/sections/video-custom.liquid
+++ b/sections/video-custom.liquid
@@ -2,10 +2,9 @@
   <div class="">
     <video
       src="{{ section.settings.video.sources[1].url  }}"
-      autoplay
-      poster="{{ section.settings.image  | image_url: width: 800 }}"
-      muted
-      playsinline
+      
+      controls
+      
       class="w-full h-full object-cover "
       loop></video>
   </div>
@@ -32,7 +31,7 @@
         "id": "video",
         "label": "video (if a video is uploaded it will be shown instead of the image)"
 
-      },
+      }
 
     ],
     "presets": [
