--- a/sections/hero-video.liquid
+++ b/sections/hero-video.liquid
@@ -1,5 +1,5 @@
 {%- unless section.settings.full_width -%}
-  <div class="page-width hero--padded">
+  <div class="page-width videoCustom hero--padded">
 {%- endunless -%}
 
   {%- style -%}
