--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -4352,6 +4352,7 @@ product-recommendations[data-intent=complementary] .grid-item{
   }
 
 .site-footer{
+  margin-top:4rem;
   font-size:calc(var(--typeBaseSize) - 1px);
   background-color:{{ settings.color_footer | default: "#111" }};
   background-color:var(--colorFooter);
