--- a/sections/article-template.liquid
+++ b/sections/article-template.liquid
@@ -16,7 +16,7 @@
   </div>
 {%- endif -%}
 
-<header class="section-header">
+<header class="section-header test">
   <h1 class="section-header__title">{{ article.title }}</h1>
 
   <div class="article__sub-meta">
