--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -12335,7 +12335,9 @@ html[dir=rtl] .product-single__meta .rte{
 .grid-article[data-style=compact] .article-tag:not(:first-child){
     display:none;
   }
-
+.hero__sidebyside-content a{
+  font-size:14px;
+}
 @media only screen and (max-width:768px){
   .grid-article[data-style=medium]{
     flex:0 0 100%;
@@ -12351,7 +12353,7 @@ html[dir=rtl] .product-single__meta .rte{
 
     .grid-article[data-style=medium] .grid-article__meta{
       flex:0 0 60%;
-      padding-left:15px;
+
     }
 
     .grid-article[data-style=medium] .article__title{
