--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -12338,6 +12338,14 @@ html[dir=rtl] .product-single__meta .rte{
 .hero__sidebyside-content a{
   font-size:14px;
 }
+.blog-layout p{
+  font-size: 17px;
+  line-height: 130%;
+}
+.blog-layout p{
+  font-size: 16px;
+  line-height: 130%;
+}
 @media only screen and (max-width:768px){
   .grid-article[data-style=medium]{
     flex:0 0 100%;
