--- a/sections/video-custom.liquid
+++ b/sections/video-custom.liquid
@@ -54,7 +54,13 @@
         "id": "video",
         "label": "video (if a video is uploaded it will be shown instead of the image)"
 
+      },
+      {
+        "type": "image_picker",
+        "id": "poster",
+        "label": "poster image"
       }
+
 
     ],
     "presets": [
